[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.release]
lto = true
strip = true
opt-level = "z" 
# codegen-units = 1


[profile.release_mac]
inherits = "release"
link-arg=-nostartfiles
target=x86_64-apple-darwin
